# omg

./: .claudeignore  .dockerignore  .gitignore  .task7_verified  AGENTS.md  AUR_INSTALL_IMPLEMENTATION.md  CHANGELOG_IMPLEMENTATION.md  CHANGELOG_QUICKREF.md  CHANGELOG_SYSTEM.md  CHANGELOG_SYSTEM_SUMMARY.md  CLI_REVIEW_SUMMARY.md  CLI_TEST_REPORT.md  CLOUDFLARE_SETUP.md  CODEBASE_MODERNIZATION_SUMMARY.md  CODE_REVIEW_IMPROVEMENTS.md  COMMERCIAL-LICENSE  Cargo.toml  Dockerfile.debian  Dockerfile.ubuntu  ELM_ARCHITECTURE_GUIDE.md  ELM_REFACTORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_FIX_SUMMARY.md  INSTALL_FIX_VERIFICATION.md  LICENSE  MODERNIZATION_2026.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  TDD_IMPROVEMENTS.md  TDD_PROTOCOL.md  TEST_COVERAGE_REPORT.md  THIRD-PARTY-LICENSES.md  TUI_IMPROVEMENTS.md  TUI_REVIEW_SUMMARY.md  WORLD_CLASS_CLI_IMPROVEMENTS.md  YES_FLAG_FIX.md  (+22 more)
.cargo/: audit.toml  config.toml
.claude/: settings.json
.claude/agents/: Rust-Engineer.md  cli-developer.md
.github/: codeql.yml  dependabot.yml  release-drafter.yml  renovate.json
.github/workflows/: audit.yml  benchmark.yml  changelog.yml  ci.yml  codeql.yml  coverage.yml  debian.yml  docs.yml  release-drafter.yml  release.yml  test-matrix.yml
.ui-design/plans/: dashboard-improvements-implementation.md
.ui-design/progress/: phase-5-progress.md
.ui-design/reviews/: dashboard-review-2026-01-26.md
.windsurf/plans/: debian-ubuntu-support.md  docusaurus-docs-site.md  feature-roadmap.md  roadmap-implementation.md  seo-improvements.md
benches/: daemon_benchmark.rs  package_operations.rs
benchmarks/: badge.json  report_20260119_185952.md  report_20260119_221421.md  report_20260119_223217.md  report_20260119_232626.md  report_20260120_002050.md  report_20260120_004034.md  report_20260120_010309.md  report_20260120_011518.md  report_20260120_012430.md  report_20260120_015306.md  report_20260120_040330.md  report_20260120_050219.md  report_20260122_005009.md  report_20260122_010326.md  report_20260122_012323.md  report_20260123_032253.md  report_20260123_052758.md  report_20260123_054322.md  report_20260123_155059.md  report_20260123_161027.md  report_20260123_162142.md  report_20260123_173350.md  report_20260123_231016.md  report_20260124_221637.md  report_20260125_035236.md  report_20260125_041315.md  report_20260125_061408.md  report_20260125_074733.md  report_20260125_084652.md  report_20260125_085854.md  report_20260125_112449.md  report_20260125_140956.md  report_20260125_153318.md  report_20260125_161209.md  summary.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
deploy-tui/: Makefile  build.sh  go.mod  go.sum  main.go
docs/: AUTOCOMPLETE.md  CHANGELOG_EXAMPLE.md  CHANGELOG_GUIDE.md  CLI_UI_IMPROVEMENTS.md  TESTING.md  architecture.md  cache.md  changelog.md  cicd-analysis-2026.md  cicd-implementation-summary.md  cicd-improvements-implementation.md  cli-internals.md  cli.md  configuration.md  containers.md  daemon.md  faq.md  fast-status-deep-dive.md  history.md  index.md  ipc.md  package-search.md  packages.md  panic-reduction-phase1.md  phase1-performance-impact.md  phase1-quality-gates.md  phase1-summary.md  phase2-performance-results.md  phase2-quality-gates.md  phase2-summary.md  phase2-trait-variant-analysis.md  phase3-architecture-audit.md  phase3-architecture-refactor.md  phase3-dependency-audit.md  phase3-error-handling-audit.md  phase3-error-handling.md  phase3-generics-analysis.md  phase3-logging-audit.md  phase3-performance-benchmarks.md  phase3-performance-results.md  (+16 more)
docs-site/: add-frontmatter.sh  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  wrangler.toml
docs-site/docs/: api-reference.md  architecture.md  cache.md  changelog.md  ci.md  cli-internals.md  cli.md  configuration.md  containers.md  daemon.md  enterprise.md  faq.md  fleet.md  history.md  index.md  interactive.md  ipc.md  package-search.md  packages.md  quickstart.md  runtimes.md  search-performance-deep-dive.md  security.md  shell-hook-deep-dive.md  shell-integration.md  task-runner.md  team-dashboard-test-coverage.md  team.md  testing.md  troubleshooting.md  tui.md  white-paper-mega.md  white-paper.md  workflows.md
docs-site/static/: manifest.json
docs/migration/: from-yay.md
docs/plans/: 2026-01-25-operational-fixes.md  2026-01-25-pyro1121-site-redesign.md  2026-01-26-rust-2026-modernization-design.md  2026-01-26-rust-2026-phase1-safety.md  2026-01-27-rust-2026-phase2-async.md  2026-01-27-task5-arc-conversions-summary.md  phase2-clone-hotspots.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_config.rs
scripts/: benchmark-debian.sh  check-perf-regression.py  debian-smoke-test.sh  debian-smoke.sh  docker-test.sh  enhance-commit-messages.py  generate-changelog.sh  install-hooks.sh  sync-wiki.sh  test-all.sh  test-debian.sh  update-changelog.sh
site/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
site/public/: _headers  install.sh  robots.txt  sitemap.xml
site/src/: App.tsx  index.css  index.tsx
site/workers/: deploy-analytics.sh  package-lock.json  package.json  schema-production.sql  (+2 more)
src/: lib.rs
tests/: README.md  absolute_coverage.rs  alpm_harness.rs  arch_tests.rs  bench_debian.rs  bench_pure_rust.rs  benchmarks.rs  cli_integration.rs  cli_package_repro.rs  comprehensive_tests.rs  daemon_security_tests.rs  debian_cache_tests.rs  debian_daemon_tests.rs  debian_ipc_tests.rs  debian_pure_integration.rs  debian_search_integration.rs  debian_tests.rs  e2e_tests.rs  error_tests.rs  exhaustive_cli_matrix.rs  failure_tests.rs  fuzzy_suggestion_tests.rs  install_integration.rs  integration_suite.rs  logic_tests.rs  metrics_tests.rs  mutation_tests.rs  package_service_tests.rs  performance_tests.rs  privilege_tests.rs  property_tests.proptest-regressions  property_tests.rs  property_tests_v2.rs  real_world_integration.rs  repro_panic.rs  safe_ops_integration.rs  security_audit_tests.rs  security_tests.rs  service_install_tests.rs  tdd_edge_cases.rs  (+6 more)
(+250 files in other folders)
