[package]
name = "omg"
version = "0.1.31"
edition = "2024"
rust-version = "1.92"
description = "The Fastest Unified Package Manager for Arch Linux + All Language Runtimes"
authors = ["OMG Team"]
license = "MIT"
repository = "https://github.com/PyRo1121/omg/"
readme = "README.md"
keywords = ["package-manager", "arch-linux", "version-manager", "runtime"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "omg_lib"
path = "src/lib.rs"

[[bin]]
name = "omg"
path = "src/bin/omg.rs"

[[bin]]
name = "omgd"
path = "src/bin/omgd.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5.54", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.5"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async runtime
tokio = { version = "1.48", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "fs",
    "io-util",
    "sync",
    "signal",
    "time",
] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.20"
bincode = { version = "2.0", features = ["serde"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }
httpdate = "1.0"

# Filesystem
tokio-util = { version = "0.7.13", features = ["io", "codec"] }

# Archives + compression (PURE RUST - no C deps)
tar = "0.4.43"
flate2 = { version = "1.0.35", default-features = false, features = ["rust_backend"] }  # miniz_oxide
zip = { version = "2.2.2", default-features = false, features = ["deflate", "time"] }
lzma-rs = "0.3"  # Pure Rust XZ/LZMA (replaces xz2)
regex = "1.11.1"
ruzstd = "0.8"  # Pure Rust zstd decoder (replaces zstd)

# Git operations - using command-line git (always available on Arch)
# Removed libgit2/gix dependency for simpler builds

# Memory management
parking_lot = "0.12.3"
dashmap = "6.0"
moka = { version = "0.12", features = ["sync"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Progress bars
indicatif = "0.18.3"

# Colors/TTY
owo-colors = "4.1"
console = "0.16.2"

# Interactive prompts
dialoguer = "0.12.0"

# Configuration
home = "0.5.11"

# Cryptography
sha2 = "0.10.8"
blake3 = "1.5.5"
hex = "0.4.3"

# Date & Time
jiff = { version = "0.2", features = ["serde"] }

# Database (PURE RUST embedded DB - replaces LMDB)
redb = "3.1"

# Direct libalpm bindings (for transactions - install/remove/upgrade)
alpm = "5.0.2"

# Official Arch Linux pure Rust ALPM ecosystem (archlinux/alpm)
# For parsing/inspection - pure Rust, spec-compliant
alpm-types = "0.11"
alpm-srcinfo = "0.6"
alpm-db = "0.2"
alpm-repo-db = "0.1"
alpm-pkginfo = "0.6"

# Process execution
which = "7.0.0"

# Semver handling
semver = "1.0.25"

# Tempfile handling
tempfile = "3.15.0"


# Data parallelism
rayon = "1.11"

# Security (Phase 4.2) - PURE RUST crypto backend (for package verification, not secrets)
sequoia-openpgp = { version = "2.2.0-pqc.1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
nucleo-matcher = "0.3.1"
dirs = "6.0.0"
libc = "0.2.180"
# mimalloc removed - using system allocator (pure Rust)
ahash = "0.8.12"
uuid = { version = "1.12", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pprof = { version = "0.13", features = ["flamegraph"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
