[package]
name = "omg"
version = "0.1.122"
edition = "2024"
rust-version = "1.92"
description = "The Fastest Unified Package Manager for Arch Linux + All Language Runtimes"
authors = ["OMG Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/PyRo1121/omg/"
readme = "README.md"
keywords = ["package-manager", "arch-linux", "version-manager", "runtime"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.cargo-machete]
ignored = ["ar", "gzp", "winnow", "debian-packaging"]

[lib]
name = "omg_lib"
path = "src/lib.rs"

[[bin]]
name = "omg"
path = "src/bin/omg.rs"

[[bin]]
name = "omgd"
path = "src/bin/omgd.rs"

[[bin]]
name = "omg-fast"
path = "src/bin/omg-fast.rs"

[dependencies]

# CLI Framework
clap = { version = "4.5.54", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"
async-trait = "0.1"

# Async runtime
tokio = { version = "1.49", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "process",
    "fs",
    "io-util",
    "sync",
    "signal",
    "time",
] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
bitcode = { version = "0.6", features = ["serde"] }

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "stream"] }
httpdate = "1.0.3"

# Filesystem
tokio-util = { version = "0.7.18", features = ["io", "codec", "rt"] }

# Archives + compression (zlib backend for stability, rust_backend has bugs in 1.1.8)
tar = "0.4.44"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
lz4_flex = { version = "0.12", default-features = false, features = [
    "frame",
] }
zip = { version = "7.1.0", default-features = false, features = [
    "deflate",
    "time",
] }
lzma-rs = "0.3" # Pure Rust XZ/LZMA (replaces xz2)
regex = "1.12.2"
ruzstd = "0.8.2" # Pure Rust zstd decoder (replaces zstd)

# Git operations - using command-line git (always available on Arch)

# Memory management
parking_lot = "0.12.5"
zerocopy = { version = "0.8", features = ["derive"] }
dashmap = "5.4.0"
moka = { version = "0.12", features = ["sync"] }
memchr = "2.7"                                   # SIMD-accelerated string search
memmap2 = "0.9"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Progress bars
indicatif = "0.18.3"

# Colors/TTY
owo-colors = "4.2.3"
console = "0.16.2"
supports-color = "3.0.0"
# lipgloss = "0.1"  # TODO: Add back when API is stable

# Interactive prompts
dialoguer = "0.12.0"
csv = "1.3"
comfy-table = "7.1"

# File watching
notify = "7.0"

# Configuration
home = "0.5.12"

# Cryptography
sha2 = "0.10.9"
hex = "0.4.3"

# Date & Time
jiff = { version = "0.2.18", features = ["serde"] }

# Database (PURE RUST embedded DB - replaces LMDB)
redb = "3.1"

# Direct libalpm bindings (for transactions - install/remove/upgrade)
alpm = { version = "5.0.2", optional = true }

# Official Arch Linux pure Rust ALPM ecosystem (archlinux/alpm)
alpm-types = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", package = "alpm-types", optional = true }
alpm-srcinfo = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", package = "alpm-srcinfo", optional = true }
alpm-db = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", package = "alpm-db", optional = true }
alpm-repo-db = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", package = "alpm-repo-db", optional = true }
alpm-pkginfo = { git = "https://gitlab.archlinux.org/archlinux/alpm/alpm.git", package = "alpm-pkginfo", optional = true }

# Process execution
which = "8.0"

# Semver handling
semver = "1.0.27"

# Tempfile handling
tempfile = "3.24.0"

# Data parallelism
rayon = "1.11.0"

# Security (Phase 4.2) - PURE RUST crypto backend (for package verification, not secrets)
sequoia-openpgp = { version = "2.2.0-pqc.1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"], optional = true }
nucleo-matcher = "0.3.1"
dirs = "6.0.0"
ahash = "0.8.12"
uuid = { version = "1.19", features = ["v4"] }
ratatui = "0.28"
crossterm = "0.27"
# terminal_size = "0.4"  # TODO: Add back when using lipgloss
rust-apt = { version = "0.9.0", optional = true }
rustix = { version = "0.38", features = ["fs", "process"] }

# Debian/Ubuntu 2026 Performance Stack
debian-packaging = { version = "0.18", optional = true } # Pure Rust apt reimplementation
winnow = { version = "0.7", optional = true }            # Zero-copy parser combinators
gzp = { version = "2.0", optional = true }               # Parallel gzip/zstd decompression
ar = { version = "0.9", optional = true }                # Pure Rust .ar archive parsing
rkyv = { version = "0.8", features = ["bytecheck"] }              # Zero-copy deserialization
whoami = "2.0.2"
governor = "0.10.4"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
sentry = { version = "0.46.1", features = ["anyhow", "tracing"] }
sentry-tracing = "0.46.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.24.0"
assert_cmd = "2.1"
predicates = "3.1"
pprof = { version = "0.15", features = ["flamegraph"] }
cargo-audit = "0.22"                                         # Security vulnerability auditing
proptest = "1.4"                                             # Property-based testing
rand = "0.9"                                                 # Random generation for fuzz tests
serde_json = "1.0"                                           # JSON parsing for test assertions
serial_test = "3.2"                                          # Serialize tests that modify global state
scopeguard = "1.2"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"

[profile.release]
lto = "fat"       # Full LTO for maximum cross-crate inlining
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Faster dev builds for iteration
[profile.dev.package."*"]
opt-level = 2 # Optimize dependencies in dev mode

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["arch", "license", "pgp"]
arch = [
    "alpm",
    "alpm-types",
    "alpm-srcinfo",
    "alpm-db",
    "alpm-repo-db",
    "alpm-pkginfo"
]
pgp = ["sequoia-openpgp"] # Optional PGP verification (requires Rust 1.80+)

# Debian/Ubuntu support - unified feature
# Requires libapt-pkg-dev: `apt install libapt-pkg-dev`
debian = ["debian-packaging", "winnow", "gzp", "ar", "rust-apt"]

# Pure Rust Debian support (no FFI, no system dependencies) - for testing/indexing
debian-pure = ["debian-packaging", "winnow", "gzp", "ar"]

license = [] # Enable license/subscription features (Pro, Team, Enterprise tiers)
proptest = [] # Enable property-based tests
docker_tests = [] # Enable tests that require running as root (e.g. in Docker)
sequoia-openpgp = ["dep:sequoia-openpgp"]
